fix(button-groups): update z-index for button group focus (#2931)

--- a/ui/components/button-groups/base/_index.scss
+++ b/ui/components/button-groups/base/_index.scss
@@ -16,6 +16,10 @@
   .slds-button {
     border-radius: 0;
     border-width: $border-width-thin;
+
+    &:focus {
+      z-index: $z-index-default;
+    }
   }
 }
 
